# dnsimple-api-examples

./: CONTRIBUTING.markdown  CONTRIBUTING.md  README.markdown  README.md
.github/: dependabot.yml
curl/: README.markdown  apply_template.sh  auth.sh  badarg.sh  badauth.sh  cancel_domain_transfer.sh  check.sh  create_contact.sh  create_domain.sh  domains.sh  (+6 more)
rust/: .gitignore  Cargo.toml  README.markdown  token.txt
rust/account_list/: Cargo.toml
rust/account_list/src/: account_list.rs  main.rs
rust/auth/: Cargo.toml
rust/auth/src/: auth.rs  main.rs
rust/cancel_domain_transfers/: Cargo.toml
rust/cancel_domain_transfers/src/: cancel_domain_transfer.rs  main.rs
rust/check/: Cargo.toml
rust/check/src/: check.rs  main.rs
rust/create_contact/: Cargo.toml
rust/create_contact/src/: create_contact.rs  main.rs
rust/create_domain/src/: create_domain.rs  main.rs
rust/domain_transfers/: Cargo.toml  token.txt
rust/domain_transfers/src/: domain_transfers.rs  main.rs
rust/list_domains/: Cargo.toml
rust/list_domains/src/: list_domains.rs  main.rs
rust/list_zone_records/: Cargo.toml
rust/list_zone_records/src/: list_zone_records.rs  main.rs
rust/request_lets_encrypt_certificate/: Cargo.toml
rust/request_lets_encrypt_certificate/src/: main.rs  request_lets_encrypt_certificate.rs
rust/src/: bad_auth.rs  cancel_domain_transfer.rs  lib.rs  main.rs
rust/tld_extended_attributes/: Cargo.toml
rust/tld_extended_attributes/src/: main.rs  tld_extended_attributes.rs
rust/transfer_domain/: Cargo.toml
rust/transfer_domain/src/: main.rs  transfer_domain.rs
(+180 files in other folders)
